Adding jq effects to homepage, working on comments

--- a/httpd.conf
+++ b/httpd.conf
@@ -83,7 +83,8 @@ Group apache
 # e-mailed.  This address appears on some server-generated pages, such
 # as error documents.  e.g. admin@your-domain.com
 #
-ServerAdmin root@localhost
+ServerAdmin joedriscoll79@gmail.com
+#ServerAdmin root@localhost
 
 #
 # ServerName gives the name and port that the server uses to identify itself.
@@ -296,6 +297,9 @@ LogLevel warn
     # For type maps (negotiated resources):
     #AddHandler type-map var
 
+    # Parse php within html file types
+    AddHandler application/x-httpd-php .html .htm
+    
     #
     # Filters allow you to process content before it is sent to the client.
     #
