--- a/ignore/php.ini
+++ b/ignore/php.ini
@@ -966,7 +966,9 @@ smtp_port = 25
 
 ; For Unix only.  You may supply arguments as well (default: "sendmail -t -i").
 ; http://php.net/sendmail-path
-sendmail_path = /usr/lib/sendmail.postfix -t -i
+;sendmail_path = /usr/lib/sendmail.postfix -t -i
+sendmail_path = /usr/lib/sendmail -t -i
+
 
 ; Force the addition of the specified parameters to be passed as extra parameters
 ; to the sendmail binary. These parameters will always replace the value of
